# linear_rep_geometry

./: .gitignore  1_subspace.ipynb  1_subspace.py  1_subspace.sh  2_heatmap.ipynb  2_heatmap.py  3_measurement.ipynb  3_measurement_schwartz.ipynb  4_intervention_schwartz.ipynb  4_intervention_schwartz.py  README.md  linear_rep_geometry.py  pyproject.toml  requirements.txt  setup.sh  store_matrices.py
experiments/: exp_subspace.sh  exp_suspace.sh
